v1/tests/elab/errors/fun_app/too_many_args.pion
def error = Array(Int, 0, 0);
